fixed label alignment issue.

--- a/app/styles/bootstrap-ext.css
+++ b/app/styles/bootstrap-ext.css
@@ -192,7 +192,7 @@ input.search-query {
     border-radius: 0px;
 }
 
-.api-validate label {
+api-validate label {
     display: block;
 }
 .nav-tabs>li>a {
